--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "14.18.1"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "rm -rf package-lock.json && npm cache clean && npm cache verify && npm install && node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
